--- a/style/style.css
+++ b/style/style.css
@@ -8,7 +8,8 @@
 html, body{
     background-image: url(../imagens/fundo-madeira.jpg);
     height: 100vh;
-    background-repeat: no-repeat;
+    background-size: cover;
+    
 }
 
 main{
